Closed
Bug 639459
Opened 15 years ago
Closed 15 years ago
TI+JM: incorrect result for x / x
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Assigned: jandem)
References
Details
(Whiteboard: fixed-in-jaegermonkey)
Attachments
(1 file)
|
2.82 KB,
patch
|
bhackett1024
:
review+
|
Details | Diff | Splinter Review |
--
function f() {
var a = [].length;
return a / a;
}
assertEq(f(), NaN);
--
This fails with -m -n -a:
Error: Assertion failed: got -2147483648, expected NaN
The problem is that the same FP-register is used for lhs and rhs. To check whether the result of the division fits in an integer we use the rhs-register as temp reg and this fails.
Patch in a minute.
| Assignee | ||
Comment 1•15 years ago
|
||
Allocates a temp register for the is-integer check. The tracker can handle FP-registers now so this also ensures we don't overwrite fpRight.
Attachment #517399 -
Flags: review?(bhackett1024)
Updated•15 years ago
|
Attachment #517399 -
Flags: review?(bhackett1024) → review+
Comment 2•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•