[INFER] Allocate temp register for JSOP_DIV integer check, bug 639459, r=bhackett